# sdl2-template

./: CMakeLists.txt  main.cpp
src/: main.cpp
